# django-docvault

./: CATEGORY_REFACTOR.md  INSTALL.md  MANIFEST.in  README.md  TODO.md  __init__.py  models.py  pyproject.toml  urls.py  views.py
.github/workflows/: build-package.yml
docvault/: admin.py  apps.py  mixins.py  models.py  urls.py  utils.py  views.py
docvault/management/commands/: fix_v1_version_dates.py  rebuild_category_paths.py  test_category_performance.py
docvault/migrations/: 0001_initial.py  0002_alter_documentaccess_unique_together_and_more.py  0005_changelog_importance_changelog_show_in_global.py  0006_alter_document_content_alter_document_created_at_and_more.py  0006_materialized_path_refactor.py  0007_merge_20250719_0058.py  0008_rename_docvault_doc_path_idx_docvault_do_path_5fd166_idx_and_more.py
docvault/static/docvault/css/: docvault.css
docvault/static/docvault/js/: docvault.js
docvault/templates/docvault/: base.html  category_list.html  document_changelog.html  document_compare.html  document_detail.html  document_list.html  document_version.html  global_changelog.html  search_results.html  version_history.html
migrations/: 0001_initial.py  0002_alter_documentaccess_unique_together_and_more.py  0003_documentcategory_alter_document_slug_and_more.py  0004_alter_document_category.py
templates/docvault/: base.html  document_changelog.html  document_compare.html  document_detail.html  document_version.html  global_changelog.html  search_results.html  version_history.html
templates/includes/: pagination.html
(+1 files in other folders)
